// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SitemapSection component renders correctly 1`] = `
<div>
  <div
    class="Section"
  >
    <div
      class="Container"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <h2
          class="MuiTypography-root title Typography Typography--underline MuiTypography-h2"
        >
          Main
        </h2>
        <div
          class="SitemapBlock"
        >
          <div
            class="MasonryGrid"
          >
            <div
              class="column"
              style="width: 33.333333333333336%;"
            >
              <div>
                <h4
                  class="MuiTypography-root Typography MuiTypography-h4 MuiTypography-gutterBottom"
                >
                  Get in touch
                </h4>
                <div
                  class="SitemapBlock SitemapBlock--child"
                >
                  <div>
                    <h6
                      class="MuiTypography-root Typography MuiTypography-h6 MuiTypography-gutterBottom"
                    >
                      <a
                        class="MuiTypography-root MuiLink-root MuiLink-underlineHover Anchorlink MuiTypography-colorPrimary"
                        type="button"
                      >
                        <span>
                          +44 (0) 1234567890
                        </span>
                      </a>
                    </h6>
                  </div>
                </div>
              </div>
            </div>
            <div
              class="column"
              style="width: 33.333333333333336%;"
            >
              <div>
                <h4
                  class="MuiTypography-root Typography MuiTypography-h4 MuiTypography-gutterBottom"
                >
                  About BMI
                </h4>
                <div
                  class="SitemapBlock SitemapBlock--child"
                >
                  <div>
                    <h6
                      class="MuiTypography-root Typography MuiTypography-h6 MuiTypography-gutterBottom"
                    >
                      <a
                        class="MuiTypography-root MuiLink-root MuiLink-underlineHover Anchorlink MuiTypography-colorPrimary"
                        type="button"
                      >
                        <span>
                          Our story
                        </span>
                      </a>
                    </h6>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`SitemapSection component renders correctly if incomplete 1`] = `
<div>
  <div
    class="Section"
  >
    <div
      class="Container"
    >
      <div
        class="MuiContainer-root MuiContainer-maxWidthXl"
      >
        <h2
          class="MuiTypography-root title Typography Typography--underline MuiTypography-h2"
        />
        <div
          class="SitemapBlock"
        >
          <div
            class="MasonryGrid"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
